# auth_service

./: .env.example  .gitignore  README.md  docker-compose-tests.yml  docker-compose.yml  env.example  pyproject.toml
.github/workflows/: code-checker.yaml
docs/: auth_service.puml
nginx/configs/: site.conf
src/: Dockerfile  cli.py  entrypoint.sh  main.py  pyproject.toml  settings.py
src/alembic/: env.py
src/alembic/versions/: 04868df744f3_init_migration.py  52fdd3920465_init_migration.py  87a733b2266c_init_migration.py  95dd0058eed5_add_roles.py
src/api/: auth.py  dependencies.py  users.py
src/api/v1/: __init__.py  auth.py  roles.py  users.py
src/core/config/: settings.py
src/db/: postgres.py  roles.py  users.py
src/dependensies/: auth.py  users.py
src/entities/: tokens.py
src/models/: __init__.py  refresh_tokens.py  roles.py  users.py
src/repositories/refresh_tokens/: base.py  redis_revoked_refresh_token.py  sqlalchemy_refresh_token.py
src/schemas/: auth_request.py  roles.py  tokens.py  users.py
src/serrvices/: tokens.py  users.py
src/services/: access_tokens.py  auth.py  base_tokens.py  exceptions.py  refresh_tokens.py  roles.py  tokens.py  users.py
src/services/tokens/: access.py  base.py  exceptions.py  refresh.py
tests/functional/: Dockerfile  conftest.py  pyproject.toml  settings.py  wait_for_backend.py  wait_for_postgres.py
tests/functional/src/: test_auth.py  test_ping.py  test_users.py
tests/functional/src/fixtures/: aiohttp.py  auth.py  postgres.py  users.py
